第四次改版

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
-
+    <title>THE-FOOL's blog</title>
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>THE-FOOL's blog</title>
+
 </head>
 
 <body>
@@ -26,7 +26,7 @@
 
     <div class="inner">
         <h1>THE-FOOL's blog</h1>
-        <h2>个人博客</h2>
+        <h2>Welcome to join FFF group</h2>
     </div>
 </header>
 
@@ -78,9 +78,7 @@
                     href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
         </section>
 
-        <aside id="sidebar">
 
-        </aside>
     </div>
 </div>
 
