--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <!--头部-->
 <header>
     <div class="inner">
-        <h1>THE-FOOL's blog</h1>
+        <h1>JiangTong's blog</h1>
         <h2>Welcome to join FFF group</h2>
     </div>
 </header>
@@ -87,49 +87,175 @@
 <div id="content-wrapper">
     <div class="inner clearfix">
         <section id="main-content">
-            <h3>
-                <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span
-                        aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+            <div class="line_item" data-line="0"></div>
+            <h2 class="line  " data-line="0" id="e5889de6b689e8aebee8aea1e6a8a1e5bc8f">初涉设计模式</h2>
+            <div class="line_item" data-line="1"></div>
+            <h3 class="line  " data-line="1" id="e59fbae69cace6a682e5bfb5">基本概念</h3>
+            <div class="line_item" data-line="2"></div>
+            <p class="line  " data-line="2">设计模式和建筑学一样，是软件工程领域的设计前辈（四个人 Gang of Four 简称GOF）把建筑学的理论抄袭模仿创新发展成为软件开发领域的通用
+                <strong>解决方案</strong>，我们称之为设计模式。</p>
+            <div class="line_item" data-line="3"></div>
+            <h3 class="line  " data-line="3" id="e8aebee8aea1e6a8a1e5bc8fe698afe99da2e59091e69caae69da5e7bc96e7a88b">设计模式是面向未来编程</h3>
+            <div class="line_item" data-line="4"></div>
+            <p class="line  " data-line="4">设计模式如果只从代码上看是将
+                <strong>代码复杂化</strong>,比如策略模式：
+                <br> 我明明可以只用一个函数就可以搞定，为什么偏偏定义这么多对象，这不是SB吗？？
+                <br> 那么为什么全世界人都这么做？？那就是面向未来编程。
+                <br> 如果单从今天来看，确实是啰嗦，但是从未来需求变更，代码可维护性来看，从整个历史长河来看，他减轻的不是一天的工作量，有时候甚至是决定性的。。。。
+                <br> 这就是
+                <strong>面向未来编程</strong>
+                <br> 设计模式如果只从代码上看是将
+                <strong>代码复杂化</strong>,比如策略模式：
+                <br> 我明明可以只用一个函数就可以搞定，为什么偏偏定义这么多对象，这不是SB吗？？
+                <br> 那么为什么全世界人都这么做？？那就是面向未来编程。
+                <br> 如果单从今天来看，确实是啰嗦，但是从未来需求变更，代码可维护性来看，从整个历史长河来看，他减轻的不是一天的工作量，有时候甚至是决定性的。。。。
+                <br>
+                <strong>
+                    <em>这就是面向未来编程</em>
+                </strong>
+            </p>
+<pre class="xiaoshujiang_code_container"><a class="xiaoshujiang_code_button hljs-keyword" title="拍照成代码图片"><i class="fa fa-camera"></i></a>
+  <code class="language-python hljs">function Price(personType, price) {
+      if(personType =='vip') {
+            return price *0.5;  //大客户5折
+      }else if(personType =='old'){
+            return price *0.3;  //老客户3折
+      }else {
+            return price;       //其他都全价
+        }
+      }
+  </code>
+</pre>
+            <div class="line_item" data-line="27"></div>
+            <p class="line  " data-line="27">
+                <strong>只扩充不修改原则</strong>
+            </p>
+<pre class="xiaoshujiang_code_container"><a class="xiaoshujiang_code_button hljs-keyword" title="拍照成代码图片"><i class="fa fa-camera"></i></a>
+  <code class="language-python hljs">
+      //vip客户优惠策略类
+      Price.vipPrice = function () {
+        this.discount =0.5;
+        this.getPrice = function (price) {
+        return price*this.discount
+        }
+      }
+  </code>
+</pre>
+<pre class="xiaoshujiang_code_container"><a class="xiaoshujiang_code_button hljs-keyword" title="拍照成代码图片"><i class="fa fa-camera"></i></a>
+  <code class="language-python hljs">
+      //老客户优惠策略类
+      Price.oldPrice = function () {
+        this.discount =0.3;
+        this.getPrice = function (price) {
+        return price*this.discount
+        }
+      }
+  </code>
+</pre>
+<pre class="xiaoshujiang_code_container"><a class="xiaoshujiang_code_button hljs-keyword" title="拍照成代码图片"><i class="fa fa-camera"></i></a>
+  <code class="language-python hljs">
+      //普通客户
+      Price.oldPrice = function () {
+        this.discount = 1;
+        this.getPrice = function (price) {
+        return price*this.discount
+        }
+      }
+  </code>
+</pre>
+            <div class="line_item" data-line="55"></div>
+            <h3 class="line  " data-line="55" id="e99da2e59091e5afb9e8b1a1e58e9fe58899">面向对象原则</h3>
+            <div class="line_item" data-line="56"></div>
+            <p class="line  " data-line="56">设计模式只不过是面向对象编程的延迟
+                <br> 以上设计模式其实是
+                <strong>
+                    <em>面向对象编程原则</em>
+                </strong>的具体运用
+                <br> 也就是设计模式的代码为什么这么写：是有个依据的，就是：面向对象编程原则
+                <br> 只要按照这些原则去实现代码，就能保证代码
+                <strong>
+                    <em>健壮性，可维护性，可扩展性</em>
+                </strong>
+            </p>
+            <div class="line_item" data-line="60"></div>
+            <h3 class="line  " data-line="60" id="e99da2e59091e5afb9e8b1a1e7bc96e7a88be79a84e4bba3e7a081e7bb93e69e84e58886e69e90">面向对象编程的代码结构分析</h3>
+            <div class="line_item" data-line="61"></div>
+            <p class="line  " data-line="61">学习设计模式其实是为了掌握
+                <strong>
+                    <em>面向对象编程方法</em>
+                </strong>，而不是为了学习这些模式，通过模式来理解面向对象的编程方法，这才是重要的。
+                <br> 所有的
+                <strong>
+                    <em>面向对象编程</em>
+                </strong>的代码结构都是按照如下两点拼凑出来的（包括设计模式）：</p>
+            <ul>
+                <li>
+                    <p>面向对象原则</p>
+                </li>
+                <li>
+                    <p>对象之间的关系</p>
+                </li>
+            </ul>
+            <div class="line_item" data-line="65"></div>
+            <h3 class="line  " data-line="65" id="e8aebee8aea1e6a8a1e5bc8fe79a84e69cace8b4a8">设计模式的本质</h3>
+<pre class="xiaoshujiang_code_container"><a class="xiaoshujiang_code_button hljs-keyword" title="拍照成代码图片"><i class="fa fa-camera"></i></a>
+  <code class="language-python hljs">
+      //模块化 解耦合
+      //搭积木开发模式---
+      //先去开发一些积木。。。
+      //产品详细页面
+      //产品基本信息模块 产品详细信息模块 评论模块
+      Var page=function(){
+      guanlianguanxi This.module1. This.module2
+      }
+      //关联关系：1:1   1:n
+      var shoppingCar ={
+      1:m=n List[product]
+      }
+  </code>
+</pre>
+            <ul>
+                <li>
+                    <p>耦合定义来源于电路学。</p>
+                </li>
+                <li>
+                    <p>当一个模块直接修改或者损坏，会导致另一个模块也损坏或者不起作用，则称二者存在耦合。
+                        <br> 解耦合---高耦合---低耦合---降低耦合
+                    </p>
+                </li>
+            </ul>
+            <div class="line_item" data-line="86"></div>
+            <h3 class="line  " data-line="86" id="e5a48de69d82e997aee9a298e7bc96e7a88be7acace4b880e6ada5umle8be85e58aa9e6809de88083e28093e6a0b8e5bf83">复杂问题编程第一步UML辅助思考–核心</h3>
+            <div class="line_item" data-line="87"></div>
+            <p class="line  " data-line="87">主要是了解对象之间的关系，了解对象之间的各种关系：
+                <br> 关联关系 – 产品详细信息模块化</p>
+            <ul>
+                <li>
+                    <p>继承关系 – 计算周长案例</p>
+                </li>
+                <li>
+                    <p>聚合关系 – 产品详细信息模块化
+                        <br> 依赖关系：
+                    </p>
+                </li>
+                <li>
+                    <p>对象作为另一个函数的参数</p>
+                </li>
+                <li>
+                    <p>对象的方法中使用了另一个对象</p>
+                </li>
+            </ul>
+            <div class="line_item" data-line="94"></div>
+            <h3 class="line  " data-line="94" id="e99da2e59091e5afb9e8b1a1e58e9fe58899-1">面向对象原则</h3>
+            <div class="line_item" data-line="95"></div>
+            <p class="line  " data-line="95">面向对象 设计模式他们都是依据 这些原则写出来的：
+                <br> 同样，也是面向对象三大特征的运用：封装，多态，继承
+                <br> 单一职责原则 -- 面向未来编程.
+                <br> 面向未来编程：现在编程 现在的功能
+                <br> 面向未来：健壮性 可维护性 可扩展性 高可用（硬件）
+                <br> 关系网 --- InfoSys
+                <br> 只增加 不修改（少修改）原则 -- 开放封闭法则</p>
 
-            <p>JiangTong's blog</p>
-
-            <h3>
-                <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span
-                        aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-            <p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse
-                through them. You can easily go back to edit your page before publishing. After publishing your page,
-                you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
-
-            <h3>
-                <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span
-                        aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
-
-            <p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your
-                repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages
-                support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide
-                headers and footers without having to copy them across every page. It also offers intelligent blog
-                support and other advanced templating features.</p>
-
-            <h3>
-                <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors"
-                   aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and
-                Contributors</h3>
-
-            <p>You can <a
-                    href="https://help.github.com/articles/basic-writing-and-formatting-syntax/#mentioning-users-and-teams"
-                    class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The
-                resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In
-                2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett
-                (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a
-                        href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-            <h3>
-                <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span
-                        aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-            <p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a
-                    href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
         </section>
 
 
