--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <div class="cute-shadow"><img src="images/shadow.png" alt="shadow"/></div>
     </div>
 </div>
-
+<!--侧边栏-->
 <aside class="accordion">
     <h1>学习笔记</h1>
     <div class="">
@@ -245,14 +245,14 @@
     <div class="inner clearfix">
         <section id="main-content">
             <div class="line_item" data-line="0"></div>
-            <h2 class="line  " data-line="0" id="e5889de6b689e8aebee8aea1e6a8a1e5bc8f">初涉设计模式</h2>
+            <h2 class="line  " data-line="0">初涉设计模式</h2>
             <div class="line_item" data-line="1"></div>
-            <h3 class="line  " data-line="1" id="e59fbae69cace6a682e5bfb5">基本概念</h3>
+            <h3 class="line  " data-line="1">基本概念</h3>
             <div class="line_item" data-line="2"></div>
             <p class="line  " data-line="2">设计模式和建筑学一样，是软件工程领域的设计前辈（四个人 Gang of Four 简称GOF）把建筑学的理论抄袭模仿创新发展成为软件开发领域的通用
                 <strong>解决方案</strong>，我们称之为设计模式。</p>
             <div class="line_item" data-line="3"></div>
-            <h3 class="line  " data-line="3" id="e8aebee8aea1e6a8a1e5bc8fe698afe99da2e59091e69caae69da5e7bc96e7a88b">
+            <h3 class="line  " data-line="3">
                 设计模式是面向未来编程</h3>
             <div class="line_item" data-line="4"></div>
             <p class="line  " data-line="4">设计模式如果只从代码上看是将
@@ -272,8 +272,8 @@
                     <em>这就是面向未来编程</em>
                 </strong>
             </p>
-<pre class="xiaoshujiang_code_container"><a class="xiaoshujiang_code_button hljs-keyword" title="拍照成代码图片"><i
-        class="fa fa-camera"></i></a>
+            <pre class="xiaoshujiang_code_container"><a class="xiaoshujiang_code_button hljs-keyword" title="拍照成代码图片"><i
+                    class="fa fa-camera"></i></a>
   <code class="language-python hljs">function Price(personType, price) {
       if(personType =='vip') {
       return price *0.5; //大客户5折
@@ -289,8 +289,8 @@
             <p class="line  " data-line="27">
                 <strong>只扩充不修改原则</strong>
             </p>
-<pre class="xiaoshujiang_code_container"><a class="xiaoshujiang_code_button hljs-keyword" title="拍照成代码图片"><i
-        class="fa fa-camera"></i></a>
+            <pre class="xiaoshujiang_code_container"><a class="xiaoshujiang_code_button hljs-keyword" title="拍照成代码图片"><i
+                    class="fa fa-camera"></i></a>
   <code class="language-python hljs">
       //vip客户优惠策略类
       Price.vipPrice = function () {
@@ -301,8 +301,8 @@
       }
   </code>
 </pre>
-<pre class="xiaoshujiang_code_container"><a class="xiaoshujiang_code_button hljs-keyword" title="拍照成代码图片"><i
-        class="fa fa-camera"></i></a>
+            <pre class="xiaoshujiang_code_container"><a class="xiaoshujiang_code_button hljs-keyword" title="拍照成代码图片"><i
+                    class="fa fa-camera"></i></a>
   <code class="language-python hljs">
       //老客户优惠策略类
       Price.oldPrice = function () {
@@ -313,8 +313,8 @@
       }
   </code>
 </pre>
-<pre class="xiaoshujiang_code_container"><a class="xiaoshujiang_code_button hljs-keyword" title="拍照成代码图片"><i
-        class="fa fa-camera"></i></a>
+            <pre class="xiaoshujiang_code_container"><a class="xiaoshujiang_code_button hljs-keyword" title="拍照成代码图片"><i
+                    class="fa fa-camera"></i></a>
   <code class="language-python hljs">
       //普通客户
       Price.oldPrice = function () {
@@ -326,7 +326,7 @@
   </code>
 </pre>
             <div class="line_item" data-line="55"></div>
-            <h3 class="line  " data-line="55" id="e99da2e59091e5afb9e8b1a1e58e9fe58899">面向对象原则</h3>
+            <h3 class="line  " data-line="55">面向对象原则</h3>
             <div class="line_item" data-line="56"></div>
             <p class="line  " data-line="56">设计模式只不过是面向对象编程的延迟
                 <br> 以上设计模式其实是
@@ -340,8 +340,7 @@
                 </strong>
             </p>
             <div class="line_item" data-line="60"></div>
-            <h3 class="line  " data-line="60"
-                id="e99da2e59091e5afb9e8b1a1e7bc96e7a88be79a84e4bba3e7a081e7bb93e69e84e58886e69e90">面向对象编程的代码结构分析</h3>
+            <h3 class="line  " data-line="60">面向对象编程的代码结构分析</h3>
             <div class="line_item" data-line="61"></div>
             <p class="line  " data-line="61">学习设计模式其实是为了掌握
                 <strong>
@@ -360,9 +359,9 @@
                 </li>
             </ul>
             <div class="line_item" data-line="65"></div>
-            <h3 class="line  " data-line="65" id="e8aebee8aea1e6a8a1e5bc8fe79a84e69cace8b4a8">设计模式的本质</h3>
-<pre class="xiaoshujiang_code_container"><a class="xiaoshujiang_code_button hljs-keyword" title="拍照成代码图片"><i
-        class="fa fa-camera"></i></a>
+            <h3 class="line  " data-line="65">设计模式的本质</h3>
+            <pre class="xiaoshujiang_code_container"><a class="xiaoshujiang_code_button hljs-keyword" title="拍照成代码图片"><i
+                    class="fa fa-camera"></i></a>
   <code class="language-python hljs">
       //模块化 解耦合
       //搭积木开发模式---
@@ -389,8 +388,7 @@
                 </li>
             </ul>
             <div class="line_item" data-line="86"></div>
-            <h3 class="line  " data-line="86"
-                id="e5a48de69d82e997aee9a298e7bc96e7a88be7acace4b880e6ada5umle8be85e58aa9e6809de88083e28093e6a0b8e5bf83">
+            <h3 class="line  " data-line="86">
                 复杂问题编程第一步UML辅助思考–核心</h3>
             <div class="line_item" data-line="87"></div>
             <p class="line  " data-line="87">主要是了解对象之间的关系，了解对象之间的各种关系：
@@ -412,7 +410,7 @@
                 </li>
             </ul>
             <div class="line_item" data-line="94"></div>
-            <h3 class="line  " data-line="94" id="e99da2e59091e5afb9e8b1a1e58e9fe58899-1">面向对象原则</h3>
+            <h3 class="line  " data-line="94">面向对象原则</h3>
             <div class="line_item" data-line="95"></div>
             <p class="line  " data-line="95">面向对象 设计模式他们都是依据 这些原则写出来的：
                 <br> 同样，也是面向对象三大特征的运用：封装，多态，继承
@@ -421,6 +419,239 @@
                 <br> 面向未来：健壮性 可维护性 可扩展性 高可用（硬件）
                 <br> 关系网 --- InfoSys
                 <br> 只增加 不修改（少修改）原则 -- 开放封闭法则</p>
+            <div class="line_item" data-line="1"></div>
+            <h3 class="line  " data-line="1">单例模式</h3>
+            <div class="line_item" data-line="2"></div>
+            <p class="line  " data-line="2">单例模式定义
+                <br> 就是保证只有一个实例。。就类似一个全局变量或者字面量
+                <br> A团队：
+            </p>
+            <pre class="xiaoshujiang_code_container"><a class="xiaoshujiang_code_button hljs-keyword" title="拍照成代码图片"><i
+        class="fa fa-camera"></i></a>
+            <code class="language-python hljs">
+      function gouwuce(){
+      this.price=0;
+      this.products=[];
+      }
+      var g1= new gouwuce();
+      var g2 = new gouwuce();
+      //产品详细信息页面，团购Tuan，秒购Miao
+      var g1 = new gouwuche();
+      g1.price+=1000;
+      //全局变量
+      Window.price=111;
+      Var g2 = new gouwuce();
+  </code>
+            </pre>
+            <div class="line_item" data-line="19"></div>
+            <p class="line  " data-line="19">
+                总结：模式重要的真不是代码，而是理解以及应用场景。
+                <br> 全局变量，或者一个字面量对象。。。。。
+                <br> 在js中，完全可以用字面量实现单例模式。。。。。。
+            </p>
+            <div class="line_item" data-line="23"></div>
+            <p class="line  " data-line="23">
+                单例模式其实我们完全可以用字面量或者一个全局变量来实现。
+                <br> 但是为什么还用闭包的形式包裹起来呢。。。。
+                <br> 解决污染。。。
+                <br> 实现公有私有。。。。
+                <br> 如何访问一个对象里面的属性和方法：
+            </p>
+            <ul>
+                <li>
+                    <p>Widows.$</p>
+                </li>
+                <li>
+                    <p>Return{}</p>
+                </li>
+                <li>
+                    <p>Call apply
+                        <br> 和json字面量的区别
+                        <br> 使用单例模式其实是一个完整的对象，可以定义公有和私有方法。。。
+                    </p>
+                </li>
+            </ul>
+            <div class="line_item" data-line="33"></div>
+            <h3 class="line  " data-line="33">工厂模式</h3>
+            <div class="line_item" data-line="34"></div>
+            <p class="line  " data-line="34">
+                定义 – 使用工厂来专门实例化的工作
+                <br> 使用场景
+                <br> 代码结构:
+            </p>
+            <pre class="xiaoshujiang_code_container"><a class="xiaoshujiang_code_button hljs-keyword" title="拍照成代码图片"><i
+        class="fa fa-camera"></i></a>
+  <code class="language-python hljs">//团队1
+      //算法家族 --放在同一的命名空间中
+      var Price={};
+      //vip 客户优惠策略类
+      Price.vipPrice = function() {
+      this.discount=0.5;
+      this.getPrice = function(price) {
+      return price * this.discount;
+        }
+      }
+      //老客户优惠策略类:
+      Price.oldPrice = function(){
+      this.discount =0.3;
+      this.getPrice = function(price) {
+      return price * this.discount;
+      }
+      }
+      //普通客户
+      Price.NormlPrice = function(){
+      this.discount =1;
+      this.getPrice = function(price) {
+      return price ;
+      }
+      }
+      //核心点：面向未来编程： 以后在维护的时候需求编程：比如新增钻石客户
+      Price.DiamondPrice= function() {
+      this.discount =0.98;
+      this.getPrice = function(price) {
+      return price *discount; //送我京东豆
+      //专属的电话频道。。。
+      }
+      } //工厂 -- 专门负责生成不同的实例
+      --就比如 吃货不用关心东西是如何制造的一样。。。
+      Price.factory = function (typeType) {
+      return new Price[typeType];
+      }
+      // json.
+      //json对象的调用方法的第二种； json['属性名称'] 代码结构分析 工厂模式分析
+      //团队2：使用 根本不用关心制造过程 ，只需要学会使用，
+      // 其实就是面向对象的封装性，多态性
+      var normalPrice = Price.factory("NormlPrice").getPrice(1000);
+      var oldPrice = Price.factory("oldPrice").getPrice(1000);
+      alert(normalPrice);
+      alert(oldPrice);
+      //未来新增一个新的优惠方式，如何改动最少，---只添加不修改（或者改动少），
+      // 这就是传说中的开放封闭法则（只新增不修改或者少修改法则）
+      var normalPrice = Price.factory("DiamondPrice").getPrice(1000);
+  </code>
+</pre>
+            <div class="line_item" data-line="95"></div>
+            <h3 class="line  " data-line="95">策略模式</h3>
+            <div class="line_item" data-line="96"></div>
+            <p class="line  " data-line="96">策略模式定义
+                <br> 算法家族。。。
+                <br> 打折优惠：vip 钻石 普通。。
+                <br> 代码场景:
+            </p>
+            <pre class="xiaoshujiang_code_container"><a class="xiaoshujiang_code_button hljs-keyword" title="拍照成代码图片"><i
+        class="fa fa-camera"></i></a>
+  <code class="language-python hljs">
+      //算法家族 --放在同一的命名空间中
+      var Price={};
+      //vip 客户优惠策略类
+      Price.vipPrice = function() {
+      this.discount =0.5;
+      this.getPrice = function(price) {
+      return price * this.discount;
+      }
+      }
+      //老客户优惠策略类:
+      Price.oldPrice = function(){
+      this.discount =0.3;
+      this.getPrice = function(price) {
+      return price * this.discount;
+      }
+      }
+      //普通客户
+      Price.NormlPrice = function(){
+      this.discount =1;
+      this.getPrice = function(price) {
+      return price ;
+      }
+      }
+      //2. 上下文- 类似工厂模式中工厂
+      //这里上下文的目的只是方便第三方使用，不用关心算法是怎么实现的，只需要会使用即可
+      //算法对象的引入是方便我们思考问题，应对客户每日三疯-- 需求变化频繁
+      //上下文是方便用户使用方便，封装了算法的细节
+      function Context() {
+      this.name ='';
+      // 关联关系
+      this.strategy = null;
+      this.price =0;
+      }
+      Context.prototype.set = function(name, strategy, price) {
+      this.name= name;
+      this.strategy = strategy;
+      this.price = price;
+      }
+      Context.prototype.getResult= function() {
+      //alert('123');
+      //alert(this.name);
+      //alert(this.price);
+      //alert(this.strategy.getPrice(this.price));
+      document.getElementById('type').innerHTML=this.name;
+      document.getElementById('mydiv').innerHTML=this.strategy.getPrice(this.price);
+      alert(this.strategy.getPrice(this.price));
+      } //3. 客户端使用;
+      // 上下文
+      var context = new Context();
+      //vip客户
+      var vip = new Price.vipPrice();
+      context.set ('vip客户',vip,200);
+      context.getResult();
+      //老客户 var old = new Price.oldPrice();
+      context.set('老客户', old,200);
+      context.getResult();
+      //普通客户
+      //...
+      //如果未来针对老顾客的优惠方式变了，只需要修改单个对象，而且修改这个对象不会影响其他对象
+      //如果未来针对vip的优惠方式变了，只需要修改单个对象
+      //如果以后客户又疯了，需要新增一种优惠方式，只需要新增一个对象，原来的代码丝毫不影响，也不需要修改
+  </code>
+</pre>
+            <div class="line_item" data-line="175"></div>
+            <h3 class="line  " data-line="175">观察者模式</h3>
+            <div class="line_item" data-line="176"></div>
+            <p class="line  " data-line="176">什么是观察者模式 – 生活场景分析 水壶烧水 购买楼房 监听洪水的水位。</p>
+            <div class="line_item" data-line="178"></div>
+            <p class="line  " data-line="178">
+                <br> 观察者模式的三要素：
+            </p>
+            <ul>
+                <li>
+                    <p>观察者（链家地产 售楼中心）</p>
+                </li>
+                <li>
+                    <p>监听者（就是想要购买房子的人，数组） - 通知（链家地产就会根据监听列表以此通知每个已经注册的人）
+                        <br> 监听者有可能：买房，借钱，抢劫银行，打劫。。。
+                        <br> 代码:
+                    </p>
+                </li>
+            </ul>
+            <pre class="xiaoshujiang_code_container"><a class="xiaoshujiang_code_button hljs-keyword" title="拍照成代码图片"><i
+        class="fa fa-camera"></i></a>
+  <code class="language-python hljs">
+      //观察者 售楼中心
+      Var ShouLouCenger = function（）{
+      //监听者
+      Var Oberservers=[];
+      AddOberserver:function(JianTingZhe){
+      Oberservers.push(JianTingZhe)
+      }
+      Notify:function(){
+      For(var obj in Oberservers) {
+      Obj.upate();
+      }
+      }
+      }
+      //定义监听者对象
+      Function xiaowang=function（）{
+      This.do=function(){
+      //抢劫银行
+      }
+      }
+      Function xiaoLi=function（）{
+      This.do=function(){
+      //直接买房
+      }
+      }
+  </code>
+</pre>
 
         </section>
     </div>
