第一章完成

--- a/index.html
+++ b/index.html
@@ -25,6 +25,16 @@
 </head>
 
 <body>
+<div class="pic" id="pic">
+    <div class="sz" id="sz"></div>
+    <div class="sz"></div>
+    <div class="ren" id="ren"></div>
+</div>
+<div class="pic1" id="pic1">
+    <div class="sz" id="sz1"></div>
+    <div class="sz"></div>
+    <div class="ren1" id="ren1"></div>
+</div>
 <!--眼睛-->
 <section class="stage">
     <figure class="ball">
@@ -108,8 +118,7 @@
                     对其进行的探索。
                     其中一个原因是它可以让我们站在巨人的肩膀上，获得前人所有的经验，保证我们以优雅的方式组织我们的代
                     码，满足我们解决问题所需要的条件。
-                    设计模式同样也为我们描述问题提供了通用的词汇。这比我们通过代码来向别人传达语法和语义性的描述更为方
-                    便。</p>
+                    设计模式同样也为我们描述问题提供了通用的词汇。这比我们通过代码来向别人传达语法和语义性的描述更为方便。</p>
 
                 <h4>News Subitem 2</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
@@ -674,6 +683,9 @@
     });
     cuteslider3.api.addEventListener(Cute.SliderEvent.WATING_FOR_NEXT, function (event) {
     });
+
+
+
 </script>
 </body>
 </html>
