--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script type='text/javascript' src='javascripts/cute.transitions.all.js'></script>
     <title>THE-FOOL's blog</title>
     <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <script src="HTTP://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <link rel="shortcut icon" href="favicon.ico"/>
     <link rel="bookmark" href="favicon.ico"/>
@@ -107,18 +107,18 @@
 </div>
 <!--侧边栏-->
 <aside class="accordion">
-    <h1>学习笔记</h1>
+    <h1>notes</h1>
     <div class="">
         <h2>2016/3</h2>
         <div class="opened-for-codepen">
             <h3>3/21</h3>
             <div>
-                <h4>设计模式</h4>
+                <h4>设计模式(design model)</h4>
                 <p>设计模式是可重用的用于解决软件设计中一般问题的方案。设计模式如此让人着迷，以至在任何编程语言中都有
                     对其进行的探索。
-                    其中一个原因是它可以让我们站在巨人的肩膀上，获得前人所有的经验，保证我们以优雅的方式组织我们的代
-                    码，满足我们解决问题所需要的条件。
-                    设计模式同样也为我们描述问题提供了通用的词汇。这比我们通过代码来向别人传达语法和语义性的描述更为方便。</p>
+                    其中一个原因是它可以让我们站在巨人的肩膀上，获得前人所有的经验，保证我们以优雅的方式组织我们的代码，满足我们解决问题所需要的条件。
+                    设计模式同样也为我们描述问题提供了通用的词汇。
+                    这比我们通过代码来向别人传达语法和语义性的描述更为方便。</p>
 
                 <h4>News Subitem 2</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
@@ -180,7 +180,7 @@
         </div>
     </div>
 
-    <h1>随手写写</h1>
+    <h1>special efficiency</h1>
     <div>
         <h2>Update #1</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
@@ -203,7 +203,7 @@
             ea commodo consequat.</p>
     </div>
 
-    <h1>工作总结</h1>
+    <h1>work summary</h1>
     <div>
         <h2>Misc. #1</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
@@ -298,18 +298,19 @@
             <p class="line  " data-line="27">
                 <strong>只扩充不修改原则</strong>
             </p>
-            <pre class="xiaoshujiang_code_container"><a class="xiaoshujiang_code_button hljs-keyword" title="拍照成代码图片"><i
-                    class="fa fa-camera"></i></a>
-  <code class="language-python hljs">
-      //vip客户优惠策略类
-      Price.vipPrice = function () {
-      this.discount =0.5;
-      this.getPrice = function (price) {
-      return price*this.discount
-      }
-      }
-  </code>
-</pre>
+            <pre class="xiaoshujiang_code_container">
+                <a class="xiaoshujiang_code_button hljs-keyword" title="拍照成代码图片">
+                    <i class="fa fa-camera"></i></a>
+                        <code class="language-python hljs">
+                            //vip客户优惠策略类
+                            Price.vipPrice = function () {
+                            this.discount =0.5;
+                            this.getPrice = function (price) {
+                            return price*this.discount
+                            }
+                            }
+                        </code>
+            </pre>
             <pre class="xiaoshujiang_code_container"><a class="xiaoshujiang_code_button hljs-keyword" title="拍照成代码图片"><i
                     class="fa fa-camera"></i></a>
   <code class="language-python hljs">
@@ -436,21 +437,21 @@
                 <br> A团队：
             </p>
             <pre class="xiaoshujiang_code_container"><a class="xiaoshujiang_code_button hljs-keyword" title="拍照成代码图片"><i
-        class="fa fa-camera"></i></a>
+                    class="fa fa-camera"></i></a>
             <code class="language-python hljs">
-      function gouwuce(){
-      this.price=0;
-      this.products=[];
-      }
-      var g1= new gouwuce();
-      var g2 = new gouwuce();
-      //产品详细信息页面，团购Tuan，秒购Miao
-      var g1 = new gouwuche();
-      g1.price+=1000;
-      //全局变量
-      Window.price=111;
-      Var g2 = new gouwuce();
-  </code>
+                function gouwuce(){
+                this.price=0;
+                this.products=[];
+                }
+                var g1= new gouwuce();
+                var g2 = new gouwuce();
+                //产品详细信息页面，团购Tuan，秒购Miao
+                var g1 = new gouwuche();
+                g1.price+=1000;
+                //全局变量
+                Window.price=111;
+                Var g2 = new gouwuce();
+            </code>
             </pre>
             <div class="line_item" data-line="19"></div>
             <p class="line  " data-line="19">
@@ -489,7 +490,7 @@
                 <br> 代码结构:
             </p>
             <pre class="xiaoshujiang_code_container"><a class="xiaoshujiang_code_button hljs-keyword" title="拍照成代码图片"><i
-        class="fa fa-camera"></i></a>
+                    class="fa fa-camera"></i></a>
   <code class="language-python hljs">//团队1
       //算法家族 --放在同一的命名空间中
       var Price={};
@@ -498,7 +499,7 @@
       this.discount=0.5;
       this.getPrice = function(price) {
       return price * this.discount;
-        }
+      }
       }
       //老客户优惠策略类:
       Price.oldPrice = function(){
@@ -547,72 +548,75 @@
                 <br> 打折优惠：vip 钻石 普通。。
                 <br> 代码场景:
             </p>
-            <pre class="xiaoshujiang_code_container"><a class="xiaoshujiang_code_button hljs-keyword" title="拍照成代码图片"><i
-        class="fa fa-camera"></i></a>
-  <code class="language-python hljs">
-      //算法家族 --放在同一的命名空间中
-      var Price={};
-      //vip 客户优惠策略类
-      Price.vipPrice = function() {
-      this.discount =0.5;
-      this.getPrice = function(price) {
-      return price * this.discount;
-      }
-      }
-      //老客户优惠策略类:
-      Price.oldPrice = function(){
-      this.discount =0.3;
-      this.getPrice = function(price) {
-      return price * this.discount;
-      }
-      }
-      //普通客户
-      Price.NormlPrice = function(){
-      this.discount =1;
-      this.getPrice = function(price) {
-      return price ;
-      }
-      }
-      //2. 上下文- 类似工厂模式中工厂
-      //这里上下文的目的只是方便第三方使用，不用关心算法是怎么实现的，只需要会使用即可
-      //算法对象的引入是方便我们思考问题，应对客户每日三疯-- 需求变化频繁
-      //上下文是方便用户使用方便，封装了算法的细节
-      function Context() {
-      this.name ='';
-      // 关联关系
-      this.strategy = null;
-      this.price =0;
-      }
-      Context.prototype.set = function(name, strategy, price) {
-      this.name= name;
-      this.strategy = strategy;
-      this.price = price;
-      }
-      Context.prototype.getResult= function() {
-      //alert('123');
-      //alert(this.name);
-      //alert(this.price);
-      //alert(this.strategy.getPrice(this.price));
-      document.getElementById('type').innerHTML=this.name;
-      document.getElementById('mydiv').innerHTML=this.strategy.getPrice(this.price);
-      alert(this.strategy.getPrice(this.price));
-      } //3. 客户端使用;
-      // 上下文
-      var context = new Context();
-      //vip客户
-      var vip = new Price.vipPrice();
-      context.set ('vip客户',vip,200);
-      context.getResult();
-      //老客户 var old = new Price.oldPrice();
-      context.set('老客户', old,200);
-      context.getResult();
-      //普通客户
-      //...
-      //如果未来针对老顾客的优惠方式变了，只需要修改单个对象，而且修改这个对象不会影响其他对象
-      //如果未来针对vip的优惠方式变了，只需要修改单个对象
-      //如果以后客户又疯了，需要新增一种优惠方式，只需要新增一个对象，原来的代码丝毫不影响，也不需要修改
-  </code>
-</pre>
+            <pre class="xiaoshujiang_code_container">
+                <a class="xiaoshujiang_code_button hljs-keyword" title="拍照成代码图片">
+                    <i class="fa fa-camera"></i></a>
+                        <code class="language-python hljs">
+        //算法家族 --放在同一的命名空间中
+        var Price={};
+        //vip 客户优惠策略类
+        Price.vipPrice = function() {
+        this.discount =0.5;
+        this.getPrice = function(price) {
+        return price * this.discount;
+        }
+        }
+        //老客户优惠策略类:
+        Price.oldPrice = function(){
+        this.discount =0.3;
+        this.getPrice = function(price) {
+        return price * this.discount;
+        }
+        }
+        //普通客户
+        Price.NormlPrice = function(){
+        this.discount =1;
+        this.getPrice = function(price) {
+        return price ;
+        }
+        }
+        //2. 上下文- 类似工厂模式中工厂
+        //这里上下文的目的只是方便第三方使用，不用关心算法是怎么实现的，只需要会使用即可
+        //算法对象的引入是方便我们思考问题，应对客户每日三疯-- 需求变化频繁
+        //上下文是方便用户使用方便，封装了算法的细节
+        function Context() {
+        this.name ='';
+        // 关联关系
+        this.strategy = null;
+        this.price =0;
+        }
+        Context.prototype.set = function(name, strategy, price) {
+        this.name= name;
+        this.strategy = strategy;
+        this.price = price;
+        }
+        Context.prototype.getResult= function() {
+        //alert('123');
+        //alert(this.name);
+        //alert(this.price);
+        //alert(this.strategy.getPrice(this.price));
+        document.getElementById('type').innerHTML=this.name;
+        document.getElementById('mydiv').innerHTML=this.strategy.getPrice(this.price);
+        alert(this.strategy.getPrice(this.price));
+        } //3. 客户端使用;
+        // 上下文
+        var context = new Context();
+        //vip客户
+        var vip = new Price.vipPrice();
+        context.set ('vip客户',vip,200);
+        context.getResult();
+        //老客户 var old = new Price.oldPrice();
+        context.set('老客户', old,200);
+        context.getResult();
+        //普通客户
+        //...
+        //如果未来针对老顾客的优惠方式变了，只需要修改单个对象，
+        //而且修改这个对象不会影响其他对象
+        //如果未来针对vip的优惠方式变了，只需要修改单个对象
+        //如果以后客户又疯了，需要新增一种优惠方式，只需要新增一个对象，
+        //原来的代码丝毫不影响，也不需要修改
+                        </code>
+            </pre>
             <div class="line_item" data-line="175"></div>
             <h3 class="line  " data-line="175">观察者模式</h3>
             <div class="line_item" data-line="176"></div>
@@ -633,7 +637,7 @@
                 </li>
             </ul>
             <pre class="xiaoshujiang_code_container"><a class="xiaoshujiang_code_button hljs-keyword" title="拍照成代码图片"><i
-        class="fa fa-camera"></i></a>
+                    class="fa fa-camera"></i></a>
   <code class="language-python hljs">
       //观察者 售楼中心
       Var ShouLouCenger = function（）{
@@ -683,7 +687,6 @@
     });
     cuteslider3.api.addEventListener(Cute.SliderEvent.WATING_FOR_NEXT, function (event) {
     });
-
 
 
 </script>
