导航栏完成

--- a/action.html
+++ b/action.html
@@ -54,6 +54,20 @@
         <h2>Welcome to join FFF group</h2>
     </div>
 </header>
+<!--导航栏-->
+<div class='ribbon'>
+    <a href='javascript:;'><span>Home</span></a>
+    <a href='javascript:;'><span>About</span></a>
+    <a href='javascript:;'><span>Services</span></a>
+    <a href='javascript:;'><span>Contact</span></a>
+    <a href='javascript:;'><span>Contact</span></a>
+    <a href='javascript:;'><span>Contact</span></a>
+    <a href='javascript:;'><span>Contact</span></a>
+    <a href='javascript:;'><span>Contact</span></a>
+    <a href='javascript:;'><span>Contact</span></a>
+    <a href='javascript:;'><span>Contact</span></a>
+    <a href='javascript:;'><span>Contact</span></a>
+</div>
 <!--轮播图-->
 <div class="c-860 c-demoslider">
     <div id="cuteslider_3_wrapper" class="cs-circleslight">
