--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
     <link rel="stylesheet" href="stylesheets/style.css" type="text/css"/>
+
     <script type='text/javascript' src='javascripts/modernizr.min.js'></script>
     <script type='text/javascript'>var CSSettings = {"pluginPath": "module"};</script>
     <script type='text/javascript' src='javascripts/cute.slider.js'></script>
@@ -51,6 +52,20 @@
         <h2>Welcome to join FFF group</h2>
     </div>
 </header>
+<!--导航栏-->
+<div class='ribbon'>
+    <a href='javascript:;'><span>Home</span></a>
+    <a href='javascript:;'><span>About</span></a>
+    <a href='javascript:;'><span>Services</span></a>
+    <a href='javascript:;'><span>Contact</span></a>
+    <a href='javascript:;'><span>Contact</span></a>
+    <a href='javascript:;'><span>Contact</span></a>
+    <a href='javascript:;'><span>Contact</span></a>
+    <a href='javascript:;'><span>Contact</span></a>
+    <a href='javascript:;'><span>Contact</span></a>
+    <a href='javascript:;'><span>Contact</span></a>
+    <a href='javascript:;'><span>Contact</span></a>
+</div>
 <!--轮播图-->
 <div class="c-860 c-demoslider">
     <div id="cuteslider_3_wrapper" class="cs-circleslight">
