导航栏完成

--- a/action.html
+++ b/action.html
@@ -60,13 +60,13 @@
     <a href='javascript:;'><span>About</span></a>
     <a href='javascript:;'><span>Services</span></a>
     <a href='javascript:;'><span>Contact</span></a>
-    <a href='javascript:;'><span>Contact</span></a>
-    <a href='javascript:;'><span>Contact</span></a>
-    <a href='javascript:;'><span>Contact</span></a>
-    <a href='javascript:;'><span>Contact</span></a>
-    <a href='javascript:;'><span>Contact</span></a>
-    <a href='javascript:;'><span>Contact</span></a>
-    <a href='javascript:;'><span>Contact</span></a>
+    <a href='javascript:;'><span>Trident</span></a>
+    <a href='javascript:;'><span>Gecko</span></a>
+    <a href='javascript:;'><span>WebKit</span></a>
+    <a href='javascript:;'><span>Presto</span></a>
+    <a href='javascript:;'><span>experience</span></a>
+    <a href='javascript:;'><span>prose</span></a>
+    <a href='javascript:;'><span>share</span></a>
 </div>
 <!--轮播图-->
 <div class="c-860 c-demoslider">
