--- a/index.html
+++ b/index.html
@@ -688,12 +688,37 @@
         </section>
     </div>
 </div>
+<!--评论-->
+<div id="disqus_thread"></div>
 
+<noscript>Please enable JavaScript to view the
+    <a href="https://disqus.com/?ref_noscript" rel="nofollow">
+        comments powered by Disqus.</a></noscript>
 
 <script src="javascripts/jquery-1.8.3.min.js"></script>
 <script src="javascripts/index.js"></script>
 
 <script type="text/javascript">
+    /**
+     * RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+     * LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables
+     */
+    /*
+     var disqus_config = function () {
+     this.page.url = PAGE_URL; // Replace PAGE_URL with your page's canonical URL variable
+     this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+     };
+     */
+    (function() { // DON'T EDIT BELOW THIS LINE
+        var d = document, s = d.createElement('script');
+
+        s.src = '//fooles.disqus.com/embed.js';
+
+        s.setAttribute('data-timestamp', +new Date());
+        (d.head || d.body).appendChild(s);
+
+    })();
+
     var cuteslider3 = new Cute.Slider();
     cuteslider3.setup("cuteslider_3", "cuteslider_3_wrapper", "stylesheets/slider-style.css");
     cuteslider3.api.addEventListener(Cute.SliderEvent.CHANGE_START, function (event) {
@@ -710,4 +735,5 @@
 
 </script>
 </body>
+<script id="dsq-count-scr" src="//fooles.disqus.com/count.js" async></script>
 </html>
