评论区测试

--- a/index.html
+++ b/index.html
@@ -277,7 +277,9 @@
             <div class="line_item" data-line="1"></div>
             <h3 class="line  " data-line="1">基本概念</h3>
             <div class="line_item" data-line="2"></div>
-            <p class="line  " data-line="2">设计模式和建筑学一样，是软件工程领域的设计前辈（四个人 Gang of Four 简称GOF）把建筑学的理论抄袭模仿创新发展成为软件开发领域的通用
+            <p class="line  " data-line="2">设计模式和建筑学一样，
+                是软件工程领域的设计前辈（四个人 Gang of Four 简称GOF）
+                把建筑学的理论抄袭模仿创新发展成为软件开发领域的通用
                 <strong>解决方案</strong>，我们称之为设计模式。</p>
             <div class="line_item" data-line="3"></div>
             <h3 class="line  " data-line="3">
@@ -290,15 +292,6 @@
                 <br> 如果单从今天来看，确实是啰嗦，但是从未来需求变更，代码可维护性来看，从整个历史长河来看，他减轻的不是一天的工作量，有时候甚至是决定性的。。。。
                 <br> 这就是
                 <strong>面向未来编程</strong>
-                <br> 设计模式如果只从代码上看是将
-                <strong>代码复杂化</strong>,比如策略模式：
-                <br> 我明明可以只用一个函数就可以搞定，为什么偏偏定义这么多对象，这不是SB吗？？
-                <br> 那么为什么全世界人都这么做？？那就是面向未来编程。
-                <br> 如果单从今天来看，确实是啰嗦，但是从未来需求变更，代码可维护性来看，从整个历史长河来看，他减轻的不是一天的工作量，有时候甚至是决定性的。。。。
-                <br>
-                <strong>
-                    <em>这就是面向未来编程</em>
-                </strong>
             </p>
             <pre class="xiaoshujiang_code_container"><a class="xiaoshujiang_code_button hljs-keyword" title="拍照成代码图片"><i
                     class="fa fa-camera"></i></a>
