--- a/action.html
+++ b/action.html
@@ -57,7 +57,7 @@
 </header>
 <!--导航栏-->
 <div class='ribbon'>
-    <a href='javascript:;'><span>Home</span></a>
+    <a href='index.html'><span>Home</span></a>
     <a href='javascript:;'><span>About</span></a>
     <a href='javascript:;'><span>Services</span></a>
     <a href='javascript:;'><span>Contact</span></a>
@@ -139,7 +139,7 @@
                     对其进行的探索。
                     其中一个原因是它可以让我们站在巨人的肩膀上，获得前人所有的经验，保证我们以优雅的方式组织我们的代码，满足我们解决问题所需要的条件。
                     设计模式同样也为我们描述问题提供了通用的词汇。
-                    这比我们通过代码来向别人传达语法和语义性的描述更为方便。<a href="index.html">@more</a></p>
+                    这比我们通过代码来向别人传达语法和语义性的描述更为方便。<a href="design.html">@more</a></p>
 
                 <h4>JavaScript作用域(action scope)</h4>
                 <p>作用域是JavaScript最重要的概念之一，想要学好JavaScript就需要理解JavaScript作用域和作用域链的工作原理。
