--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="author" content="jiangtong">
+    <meta name="description" content="Fooles是一个基于Github的静态Blog，希望用简单而清晰的写作方式Markdown分享自己的心得体会。">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Fooles">
+    <meta property="og:url" content="http://fooles.github.io/index.html">
+    <meta property="og:site_name" content="Fooles">
+    <meta property="og:description" content="Fooles是一个基于Github的静态Blog，希望用简单而清晰的写作方式Markdown分享自己的心得体会。">
+    <meta name="twitter:card" content="summar">
+    <meta name="twitter:title" content="Fooles">
+    <meta name="twitter:description" content="Fooles是一个基于Github的静态Blog，希望用简单而清晰的写作方式Markdown分享自己的心得体会。">
+
     <!-- UC强制全屏 -->
     <meta name="full-screen" content="yes">
     <!-- QQ强制全屏 -->
