--- a/design.html
+++ b/design.html
@@ -14,7 +14,9 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
     <link rel="stylesheet" href="stylesheets/style.css" type="text/css"/>
-
+    <style>.iris {
+        background: radial-gradient(circle at 50% 50%, #208ab4 0%, #9DFFAA 30%, #4381b2 100%)
+    }</style>
     <script type='text/javascript' src='javascripts/modernizr.min.js'></script>
     <script type='text/javascript'>var CSSettings = {"pluginPath": "module"};</script>
     <script type='text/javascript' src='javascripts/cute.slider.js'></script>
