--- a/ajax.html
+++ b/ajax.html
@@ -145,9 +145,10 @@
                 <p>作用域是JavaScript最重要的概念之一，想要学好JavaScript就需要理解JavaScript作用域和作用域链的工作原理。
                     今天这篇文章对JavaScript作用域和作用域链作简单的介绍，希望能帮助大家更好的学习JavaScript。<a href="action.html">@more</a></p>
 
-                <h4>面向对象继承(succession)</h4>
-                <p>它没有"子类"和"父类"的概念，也没有"类"（class）和"实例"（instance）的区分，
-                    全靠一种很奇特的"原型链"（prototype chain）模式，来实现继承。<a href="succession.html">@more</a></p>
+                <h4>News Subitem 3</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip ex ea commodo consequat.</p>
             </div>
 
             <h3>News Item #1b</h3>
