--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 </head>
 
 <body>
+
 <!--返回头部-->
 <div class="pic" id="pic">
     <div class="sz" id="sz"></div>
@@ -277,7 +278,11 @@
             </div>
         </div>
     </div>
+    <section id="diqiu" class="diqiu">
+        <script type="text/javascript" src="//rf.revolvermaps.com/0/0/6.js?i=5hte8euqea1&amp;m=2&amp;s=320&amp;c=ff0000&amp;cr1=ffffff&amp;f=calibri&amp;l=1" async="async"></script>
+    </section>
 </aside>
+
 <!--main-->
 <div id="content-wrapper">
     <div class="inner clearfix">
@@ -354,6 +359,7 @@
 <script src="javascripts/index.js"></script>
 <!--分页js-->
 <script src="javascripts/jquery.simplePagination.js"></script>
+
 <script type="text/javascript">
     /**
      * RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
@@ -365,6 +371,7 @@
      this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
      };
      */
+
     (function () { // DON'T EDIT BELOW THIS LINE
         var d = document, s = d.createElement('script');
 
