--- a/node.html
+++ b/node.html
@@ -134,6 +134,7 @@
         <div class="opened-for-codepen">
             <h3>面向对象(Object Oriented)</h3>
             <div>
+
                 <h4>设计模式(design model)</h4>
                 <p>设计模式是可重用的用于解决软件设计中一般问题的方案。设计模式如此让人着迷，以至在任何编程语言中都有
                     对其进行的探索。
@@ -145,19 +146,19 @@
                 <p>作用域是JavaScript最重要的概念之一，想要学好JavaScript就需要理解JavaScript作用域和作用域链的工作原理。
                     今天这篇文章对JavaScript作用域和作用域链作简单的介绍，希望能帮助大家更好的学习JavaScript。<a href="action.html">@more</a></p>
 
-                <h4>News Subitem 3</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.</p>
+                <h4>面向对象继承(succession)</h4>
+                <p>它没有"子类"和"父类"的概念，也没有"类"（class）和"实例"（instance）的区分，
+                    全靠一种很奇特的"原型链"（prototype chain）模式，来实现继承。<a href="succession.html">@more</a></p>
             </div>
-
-            <h3>News Item #1b</h3>
+            <h3>Nodejs</h3>
             <div>
-                <h4>News Subitem 1</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.</p>
-
+                <h4>Nodejs 入门</h4>
+                <p>JS是脚本语言，脚本语言都需要一个解析器才能运行。对于写在HTML页面里的JS，
+                    浏览器充当了解析器的角色。而对于需要独立运行的JS，NodeJS就是一个解析器。
+                    每一种解析器都是一个运行环境，不但允许JS定义各种数据结构，进行各种计算,
+                    还允许JS使用运行环境提供的内置对象和方法做一些事情。例如运行在浏览器中的JS的
+                    用途是操作DOM，浏览器就提供了document之类的内置对象。而运行在NodeJS中的JS的
+                    用途是操作磁盘文件或搭建HTTP服务器，NodeJS就相应提供了fs、http等内置对象。<a href="node.html">@more</a></p>
                 <h4>News Subitem 2</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
                     et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
@@ -268,6 +269,20 @@
             </div>
         </div>
     </div>
+    <section id="diqiu" class="diqiu">
+        <script type="text/javascript"
+                src="//rf.revolvermaps.com/0/0/6.js?i=5hte8euqea1&amp;m=2&amp;s=320&amp;c=ff0000&amp;cr1=ffffff&amp;f=calibri&amp;l=1"
+                async="async"></script>
+        <!-- hitwebcounter Code START -->
+        <a href="http://www.hitwebcounter.com" target="_blank">
+            <img src="http://hitwebcounter.com/counter/counter.php?page=6349231&style=0010&nbdigits=5&type=page&initCount=78" title="Home Remedies For Wrinkles" Alt="Home Remedies For Wrinkles"   border="0" >
+        </a>                                        <br/>
+        <!-- hitwebcounter.com -->
+        <a href="http://www.hitwebcounter.com" title="Count Stats Visits"
+           target="_blank" style="font-family: Arial, Helvetica, sans-serif;
+                                        font-size: 10px; color: #6E6A68; text-decoration: none ;">
+        </a>
+    </section>
 </aside>
 <!--main-->
 <div id="content-wrapper">
