--- a/design.html
+++ b/design.html
@@ -129,14 +129,14 @@
 <!--侧边栏-->
 <aside class="accordion">
     <h1>notes</h1>
-    <div class="">
+    <div class="opened-for-codepen">
         <h2>2016</h2>
         <div class="opened-for-codepen">
             <h3>面向对象(Object Oriented)</h3>
-            <div>
+            <div class="opened-for-codepen">
 
                 <h4>设计模式(design model)</h4>
-                <p>设计模式是可重用的用于解决软件设计中一般问题的方案。设计模式如此让人着迷，以至在任何编程语言中都有
+                <p class="opened-for-codepen">设计模式是可重用的用于解决软件设计中一般问题的方案。设计模式如此让人着迷，以至在任何编程语言中都有
                     对其进行的探索。
                     其中一个原因是它可以让我们站在巨人的肩膀上，获得前人所有的经验，保证我们以优雅的方式组织我们的代码，满足我们解决问题所需要的条件。
                     设计模式同样也为我们描述问题提供了通用的词汇。
@@ -170,14 +170,14 @@
                     aliquip ex ea commodo consequat.</p>
             </div>
             <h3>News Item #1c</h3>
-            <div class="opened-for-codepen">
+            <div>
                 <h4>News Subitem 1</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
                     et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                     aliquip ex ea commodo consequat.</p>
 
                 <h4>News Subitem 2</h4>
-                <p class="opened-for-codepen">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                     tempor incididunt ut labore et dolore magna aliqua. </p>
             </div>
         </div>
