--- a/node.html
+++ b/node.html
@@ -129,7 +129,7 @@
 <!--侧边栏-->
 <aside class="accordion">
     <h1>notes</h1>
-    <div class="">
+    <div class="opened-for-codepen">
         <h2>2016</h2>
         <div class="opened-for-codepen">
             <h3>面向对象(Object Oriented)</h3>
@@ -151,9 +151,9 @@
                     全靠一种很奇特的"原型链"（prototype chain）模式，来实现继承。<a href="succession.html">@more</a></p>
             </div>
             <h3>Nodejs</h3>
-            <div>
+            <div class="opened-for-codepen">
                 <h4>Nodejs 入门</h4>
-                <p>JS是脚本语言，脚本语言都需要一个解析器才能运行。对于写在HTML页面里的JS，
+                <p class="opened-for-codepen">JS是脚本语言，脚本语言都需要一个解析器才能运行。对于写在HTML页面里的JS，
                     浏览器充当了解析器的角色。而对于需要独立运行的JS，NodeJS就是一个解析器。
                     每一种解析器都是一个运行环境，不但允许JS定义各种数据结构，进行各种计算,
                     还允许JS使用运行环境提供的内置对象和方法做一些事情。例如运行在浏览器中的JS的
@@ -170,14 +170,14 @@
                     aliquip ex ea commodo consequat.</p>
             </div>
             <h3>News Item #1c</h3>
-            <div class="opened-for-codepen">
+            <div>
                 <h4>News Subitem 1</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
                     et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                     aliquip ex ea commodo consequat.</p>
 
                 <h4>News Subitem 2</h4>
-                <p class="opened-for-codepen">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                     tempor incididunt ut labore et dolore magna aliqua. </p>
             </div>
         </div>
