--- a/index.html
+++ b/index.html
@@ -72,15 +72,15 @@
 <div class='ribbon'>
   <a href='index.html'><span>Home</span></a>
   <a href='javascript:;'><span>About</span></a>
-  <a href='javascript:;'><span>Services</span></a>
-  <a href='javascript:;'><span>Contact</span></a>
-  <a href='javascript:;'><span>Trident</span></a>
-  <a href='javascript:;'><span>Gecko</span></a>
-  <a href='javascript:;'><span>WebKit</span></a>
-  <a href='javascript:;'><span>Presto</span></a>
-  <a href='javascript:;'><span>experience</span></a>
-  <a href='javascript:;'><span>prose</span></a>
-  <a href='javascript:;'><span>share</span></a>
+  <a href='https://nodejs.org/en/'><span>Nodejs</span></a>
+  <a href='https://angularjs.org/'><span>Angularjs</span></a>
+  <a href='http://gulpjs.com/'><span>Gulp</span></a>
+  <a href='http://zeptojs.com/'><span>Zeptojs</span></a>
+  <a href='http://www.bootcss.com/'><span>Bootstrap</span></a>
+  <a href='https://git-scm.com/'><span>Git</span></a>
+  <a href='https://jquery.com/'><span>jQuery</span></a>
+  <a href='http://reactjs.cn/'><span>Reactjs</span></a>
+  <a href='http://dojotoolkit.org/'><span>Dojo</span></a>
 </div>
 
 <!--轮播图-->
